form overflow fixes - 2

--- a/source/less/blocks/feedback-form.less
+++ b/source/less/blocks/feedback-form.less
@@ -78,7 +78,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    grid-auto-flow: column;
+    grid-template-columns: repeat(3, 1fr);
     padding: 40px 0 60px;
   }
 }
@@ -94,7 +94,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    grid-auto-flow: column;
+    grid-template-columns: repeat(4, 1fr);
     padding: 40px 0 60px;
   }
 }
